Complete responsiveness in the footer for tablets & fix layout issues in the hero section whilst viewport is scaled

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ h1 {
 
      .about-me {
         overflow: hidden;
-        text-align: center;
+        text-align: left;
         padding-top: 75px;
     }
 
@@ -105,6 +105,8 @@ h1 {
     }
 
     .hero-icon-container {
+        position: relative;
+        right: 20%;
         justify-content: flex-end;
     }
 }
@@ -218,7 +220,7 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px
+    gap: 30px;
 }
 
 .footer-icon-container > .icon {
@@ -230,4 +232,51 @@ footer > .office-worker {
     width: 100%;
     display: block;
     object-fit: cover;
+    margin-right: 0;
+}
+
+@media (min-width: 500px) {
+    .footer-container {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        padding: 32px 16px 40px;
+    }
+
+    .footer-text-container {
+        flex: 1;
+        margin: 0;
+        max-width: 450px;
+    }
+
+    footer > .office-worker {
+        flex: 1;
+        min-width: 0;
+        min-height: 300px;
+        max-width: 400px;
+        height: auto;
+    }
+
+    .footer-text-container h2 {
+        text-align: left;
+    }
+
+    .footer-text-flex-container {
+        padding: 8px 16px 40px 0px;
+    }
+
+    .footer-phone-container,
+    .footer-email-container {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+    .hidden {
+        display: block;
+    }
+
+    .footer-icon-container {
+        justify-content: flex-start;
+        gap: 20px;
+    }
 }
